[package]
name = "asn1-cbor-tools"
version = "0.1.0"
edition = "2021"
authors = ["ASN.1/CBOR Tools Contributors"]
description = "Command-line tools for dumping ASN.1 DER and CBOR encoded data"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["asn1", "cbor", "der", "parser", "dumper"]
categories = ["command-line-utilities", "parser-implementations", "encoding"]

# Multiple binary targets
[[bin]]
name = "dumpasn1"
path = "src/dumpasn1.rs"

[[bin]]
name = "dumpcbor"
path = "src/dumpcbor.rs"

[dependencies]
# No external dependencies - pure Rust standard library implementation

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[package.metadata.docs.rs]
all-features = true
